# mnemo

./: .gitignore  LICENSE  README.md  download_embedder.py  download_hf.py  download_models.py  download_models_hf.py  pyproject.toml  requirements.txt  run.bat  run_admin.bat  test_screenshot_dedup.py
docs/: CONTRIBUTING.md  benchmarks.md  setup.md
mnemo/: __init__.py  __main__.py  config.py  schema.py
mnemo/actions/: router.py
mnemo/ai/: phi3.py  query_engine.py  summarizer.py
mnemo/capture/: activity.py  file_watcher.py  ocr.py  screenshot.py
mnemo/daemon/: __init__.py  hotkey.py  tray.py
mnemo/memory/: embedder.py  store.py
mnemo/ui/: overlay.py  results.py
tests/: test_checkpoint1.py  test_checkpoint2.py  test_checkpoint3.py  test_checkpoint4.py  test_integration_week1.py  test_llm.py  test_query.py  test_query_engine.py  test_schema.py  test_smoke_e2e.py  test_stress.py  test_summarizer.py
