[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mnemo"
version = "0.1.0"
description = "A lightweight, memory-first personal AI agent for Windows."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Vinayak Tyagi" },
    { name = "Vedansh Sharma" },
]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["mnemo*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
